@@ -42,6 +42,7 @@ is $r2->title, $recipe->title;
 ## Install some deflate/inflate in the Cache driver.
 {
     no warnings 'once';
+    no warnings 'redefine';
     *Data::ObjectDriver::Driver::Cache::Cache::deflate = sub {
         $_[1]->deflate;
     };
